--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 								<div class="row">
 									<div class="col-md-12">
 										<div class="about-desc">
-											<h3>Click to know more about my experience...</h3>
+											<h3><a class="know-exp" href="experience.html"  target="_blank">Click</a> to know more about my experience...</h3>
 											<hr>
 										</div>
 									</div>
