Updated experience and apprenticeship

--- a/apprenticeship.html
+++ b/apprenticeship.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Professional Experience - Ankit Kesarwani Portfolio</title>
+	<title>Apprenticeship Experience - Ankit Kesarwani Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio webpage of Vinay Somawat" />
 	<meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
@@ -66,7 +66,7 @@
 							<li><a href="education.html">Formal Education</a></li>
 							<li><a href="#">Projects</a></li>
 							<li><a href="#">Achievements</a></li>
-							<li><a href="#">Contact</li></a><br>
+							<li><a href="#">Contact</a></li><br>
 						</ul>
 						<!-- Social -->
 						<div class="social_container">
@@ -94,88 +94,34 @@
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-								<h2>Professional Experience</h2>
+								<h2>Apprenticeship Experience</h2>
 								<hr>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
 								<div class="exp-heading">
-									<div class="exp-img" style="background-image: url(logo/linkedin.png);"></div>
-									<h2>Campus Editor</h2>
-									<h3>LinkedIn</h3>
-									<span>December 2018 - Present</span></br>
-									<span>India</span></br></br>
-									<p>LinkedIn Campus Editors are the one chosen by LinkedIn India for its Campus Editor Programme to enhance opportunities in LinkedIn's 500+ million member network.</p>
-									<p>• Helping peers to understand the effective use of Linkedin by doing one on one session with them.</p>
-									<p>• Encouraging students to share their knowledge by writing blogs/articles.</p>
-									<p>• Helping students get the opportunity they are capable of.</p>
-								</div><hr>
-								<div class="exp-heading">
-									<div class="exp-img" style="background-image: url(logo/bobble.jpeg);"></div>
-									<h2>Stud Developer Intern</h2>
-									<h3>Bobble Keyboard</h3>
-									<span>January 2019 - February 2019</span></br>
-									<span>Remote</span></br></br>
-									<p>• Developed a voice to text application using s2t SDK without using functions exposed in the library. </p>
-									<p>• Wrote JNI based Opus Encoder and Opus Decoder in reference with OPUS library. </p>
-									<p>• Wrote classes to encode and decode the audio file while transmitting the audio file to the server.</p>
-								</div><hr>
-								<div class="exp-heading">
-									<div class="exp-img" style="background-image: url(logo/ibm.png);"></div>
-									<h2>Software Developer Intern</h2>
-									<h3>IBM India Software Labs</h3>
-									<span>May 2018 - November 2018</span></br>
-									<span>Bengaluru, India</span></br></br>
-									<p>• Understood the existing Cognos 10.2 architecture in IBM B2B Services & Analytics Application.</p>
-									<p>• Responsible for testing and troubleshoot the migration from Cognos 10.2 to 11.0.11 while developing Mashup API and Web Services Description Language.</p>
-									<p>• Worked in technologies like Jenkins, Docker, and Kubernetes to Automate software development process.</p>
-									<p>• Worked with Spring Boot and CouchDB to develop Rest Endpoints.</p>
-									<p>• Winner of IBM Platform 2.0 Hackathon.</p>
-									<p>• Stood among top 10 teams from India in IBM Call for Code Hackathon. Qualified for Global Call for Code.</p>
-								</div><hr>
-								<div class="exp-heading">
-									<div class="exp-img" style="background-image: url(logo/pullerr.jpg);"></div>
-									<h2>Android Developer Intern</h2>
-									<h3>Pullerr Logistics</h3>
-									<span>November 2017 - February 2018</span></br>
-									<span>Remote</span></br></br>
-									<p>• Design & Developed Pullerr Driver application.</p>
-									<p>• Implemented Toll system in Pullerr Carrier application.</p>
-									<p>• Implemented explore the app section in Pullerr Shipper application.</p>
-									<p>• Worked with HERE API to implement toll cost system.</p>
-									<p>• Fixed bugs and improve application performance.</p>
-								</div><hr>
-								<div class="exp-heading">
-									<div class="exp-img" style="background-image: url(logo/carsense.png);"></div>
-									<h2>Software Engineering Intern</h2>
-									<h3>Carsense Technologies</h3>
-									<span>November 2017 - January 2018</span></br>
-									<span>Mumbai, India</span></br></br>
-									<p>• Developed an app that would get real-time location from an API and mock a car movement on the google map.</p>
-									<p>• Created a library to animate the object using given two Latitude and Longitude.</p>
-									<p>• Wrote Integrations test for applications.</p>
-								</div><hr>
-								<div class="exp-heading">
-									<div class="exp-img" style="background-image: url(logo/andli.jpg);"></div>
-									<h2>Database Management Intern</h2>
-									<h3>ANDL Microsoft</h3>
-									<span>May 2017 - July 2017</span></br>
+									<div class="exp-img" style="background-image: url(logo/aptron.png);"></div>
+									<h2>Trainee</h2>
+									<h3>Aptron Solutions</h3>
+									<span>December 2016</span></br>
 									<span>Noida, India</span></br></br>
-									<p>• Worked with the entire project team to design & developed Feedback Development Cycle.</p>
-									<p>• Developed process that give quick feedback on work one do on a daily basis.</p>
-									<p>• Responsible for maintaining databases.</p>
-									<p>• Monitored errors sent by defects team under direction of development team.</p>
+									<p>• Learned PHP framework cover in depth the most important techniques used to build dynamic websites.</p>
+									<p>• Learned how to connect to an ODBC-compliant database and perform hands on practice with MySQL and PHP.</p>
+									<p>• Learned E-Commerce skills including dynamic data updates and shopping cart implementation.</p>
+									<p>• Learned how to configure PHP and the Apache web server.</p>
 								</div><hr>
 								<div class="exp-heading">
-									<div class="exp-img" style="background-image: url(logo/anugraha.png);"></div>
-									<h2>Software Engineering Intern</h2>
-									<h3>Anugraha Computers</h3>
-									<span>May 2017 - June 2017</span></br>
-									<span>Remote</span></br></br>
-									<p>• Design & Developed applications on Business Insurance Basis which will give information about Total Premium of multiple policies.</p>
-									<p>• Worked in team to identify and correct bottlenecks and fix bugs in existing applications.</p>
-									<p>• Tested the entire development of the application.</p>
+									<div class="micro-img" style="background-image: url(logo/mta.png);"></div>
+									<h2>Trainee</h2>
+									<h3>Microsoft Technology Associate</h3>
+									<span>June 2016 - July 2016</span></br>
+									<span>Allahabad, India</span></br></br>
+									<p>• Learned how to utilize Android’s XML-based layout system, which builds the UI containers and widgets.</p>
+									<p>• Learned how to handle screen rotation, how to define UIs so they can adjust for different screen sizes.</p>
+									<p>• Learned how to program control of state changes in the Activity Lifecycle.</p>
+									<p>• Learned how to connect Apps to web services such as Google Maps and UPS’s package tracking API.</p>
+									<p>• Learned how to play audio and video, and standard techniques for storage and retrieval.</p>
 								</div><hr>
 							</div>
 						</div>
@@ -212,5 +158,3 @@
 
 	</body>
 </html>
-
-
