--- a/apprenticeship.html
+++ b/apprenticeship.html
@@ -93,14 +93,14 @@
 				<section class="colorlib-experience">
 					<div class="colorlib-narrow-content">
 						<div class="row">
-							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<div class="about-desc animate-box" data-animate-effect="fadeInLeft">
 								<h2>Apprenticeship Experience</h2>
 								<hr>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<div class="exp-heading">
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
 									<div class="exp-img" style="background-image: url(logo/aptron.png);"></div>
 									<h2>Trainee</h2>
 									<h3>Aptron Solutions</h3>
@@ -111,7 +111,7 @@
 									<p>• Learned E-Commerce skills including dynamic data updates and shopping cart implementation.</p>
 									<p>• Learned how to configure PHP and the Apache web server.</p>
 								</div><hr>
-								<div class="exp-heading">
+								<div class="exp-heading animate-box" data-animate-effect="fadeInRight">
 									<div class="micro-img" style="background-image: url(logo/mta.png);"></div>
 									<h2>Trainee</h2>
 									<h3>Microsoft Technology Associate</h3>
