--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Professional Experience - Ankit Kesarwani Portfolio</title>
+	<title>Formal Education - Ankit Kesarwani Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio webpage of Vinay Somawat" />
 	<meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
@@ -62,8 +62,8 @@
 					<div class="collapse">
 						<ul>
 							<li><a href="index.html">About</a></li>
-							<li><b>Professional Experience</b></li>
-							<li><a href="education.html">Formal Education</a></li>
+							<li><a href="experience.html">Professional Experience</a></li>
+							<li><b>Formal Education</b></li>
 							<li><a href="#">Projects</a></li>
 							<li><a href="#">Achievements</a></li>
 							<li><a href="#">Contact</li></a><br>
@@ -80,7 +80,7 @@
 								<li class="col-md-1"><a href="#" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 								<li class="col-md-3"></li>
 							</ul>
-						</div>						
+						</div>
 					</div>
 				</nav>
 			</aside>
@@ -94,88 +94,43 @@
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-								<h2>Professional Experience</h2>
+								<h2>Formal Education</h2>
 								<hr>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
 								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
-									<div class="exp-img" style="background-image: url(logo/linkedin.png);"></div>
-									<h2>Campus Editor</h2>
-									<h3>LinkedIn</h3>
-									<span>December 2018 - Present</span></br>
-									<span>India</span></br></br>
-									<p>LinkedIn Campus Editors are the one chosen by LinkedIn India for its Campus Editor Programme to enhance opportunities in LinkedIn's 500+ million member network.</p>
-									<p>• Helping peers to understand the effective use of Linkedin by doing one on one session with them.</p>
-									<p>• Encouraging students to share their knowledge by writing blogs/articles.</p>
-									<p>• Helping students get the opportunity they are capable of.</p>
+									<div class="exp-img" style="background-image: url(logo/iiitdmj.jpg);"></div>
+									<h2>Indian Institute of Information Technology Jabalpur</h2>
+									<h3>Bachelor of Technology, Computer Science and Engineering</h3>
+									<span>2015 - 2019</span></br>
+									<span>Jabalpur, India</span></br></br>
+									<p><b>Undergraduate Coursework</b></p>
+									<p>• Data Structure & Algorithms</p>
+									<p>• Operating System</p>
+									<p>• Software Development</p>
+									<p>• Computer Networks</p>
+									<p>• Image Processing</p>
+									<p>• Deep Learning</p>
+									<p>• Computer Graphics</p>
 								</div><hr>
-								<div class="exp-heading animate-box" data-animate-effect="fadeInRight">
-									<div class="exp-img" style="background-image: url(logo/bobble.jpeg);"></div>
-									<h2>Stud Developer Intern</h2>
-									<h3>Bobble Keyboard</h3>
-									<span>January 2019 - February 2019</span></br>
-									<span>Remote</span></br></br>
-									<p>• Developed a voice to text application using s2t SDK without using functions exposed in the library. </p>
-									<p>• Wrote JNI based Opus Encoder and Opus Decoder in reference with OPUS library. </p>
-									<p>• Wrote classes to encode and decode the audio file while transmitting the audio file to the server.</p>
-								</div><hr>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
 								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
-									<div class="exp-img" style="background-image: url(logo/ibm.png);"></div>
-									<h2>Software Developer Intern</h2>
-									<h3>IBM India Software Labs</h3>
-									<span>May 2018 - November 2018</span></br>
-									<span>Bengaluru, India</span></br></br>
-									<p>• Understood the existing Cognos 10.2 architecture in IBM B2B Services & Analytics Application.</p>
-									<p>• Responsible for testing and troubleshoot the migration from Cognos 10.2 to 11.0.11 while developing Mashup API and Web Services Description Language.</p>
-									<p>• Worked in technologies like Jenkins, Docker, and Kubernetes to Automate software development process.</p>
-									<p>• Worked with Spring Boot and CouchDB to develop Rest Endpoints.</p>
-									<p>• Winner of IBM Platform 2.0 Hackathon.</p>
-									<p>• Stood among top 10 teams from India in IBM Call for Code Hackathon. Qualified for Global Call for Code.</p>
-								</div><hr>
-								<div class="exp-heading animate-box" data-animate-effect="fadeInRight">
-									<div class="exp-img" style="background-image: url(logo/pullerr.jpg);"></div>
-									<h2>Android Developer Intern</h2>
-									<h3>Pullerr Logistics</h3>
-									<span>November 2017 - February 2018</span></br>
-									<span>Remote</span></br></br>
-									<p>• Design & Developed Pullerr Driver application.</p>
-									<p>• Implemented Toll system in Pullerr Carrier application.</p>
-									<p>• Implemented explore the app section in Pullerr Shipper application.</p>
-									<p>• Worked with HERE API to implement toll cost system.</p>
-									<p>• Fixed bugs and improve application performance.</p>
-								</div><hr>
-								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
-									<div class="exp-img" style="background-image: url(logo/carsense.png);"></div>
-									<h2>Software Engineering Intern</h2>
-									<h3>Carsense Technologies</h3>
-									<span>November 2017 - January 2018</span></br>
-									<span>Mumbai, India</span></br></br>
-									<p>• Developed an app that would get real-time location from an API and mock a car movement on the google map.</p>
-									<p>• Created a library to animate the object using given two Latitude and Longitude.</p>
-									<p>• Wrote Integrations test for applications.</p>
-								</div><hr>
-								<div class="exp-heading animate-box" data-animate-effect="fadeInRight">
-									<div class="exp-img" style="background-image: url(logo/andli.jpg);"></div>
-									<h2>Database Management Intern</h2>
-									<h3>ANDL Microsoft</h3>
-									<span>May 2017 - July 2017</span></br>
-									<span>Noida, India</span></br></br>
-									<p>• Worked with the entire project team to design & developed Feedback Development Cycle.</p>
-									<p>• Developed process that give quick feedback on work one do on a daily basis.</p>
-									<p>• Responsible for maintaining databases.</p>
-									<p>• Monitored errors sent by defects team under direction of development team.</p>
-								</div><hr>
-								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
-									<div class="exp-img" style="background-image: url(logo/anugraha.png);"></div>
-									<h2>Software Engineering Intern</h2>
-									<h3>Anugraha Computers</h3>
-									<span>May 2017 - June 2017</span></br>
-									<span>Remote</span></br></br>
-									<p>• Design & Developed applications on Business Insurance Basis which will give information about Total Premium of multiple policies.</p>
-									<p>• Worked in team to identify and correct bottlenecks and fix bugs in existing applications.</p>
-									<p>• Tested the entire development of the application.</p>
+									<div class="exp-img" style="background-image: url(logo/mvconvent.png);"></div>
+									<h2>Madhu Vachaspati Convent School</h2>
+									<h3>Intermediate, Science</h3>
+									<span>2013 - 2014</span></br>
+									<span>Allahabad, India</span></br></br>
+									<p><b>Subjects</b></p>
+									<p>• English</p>
+									<p>• Physics</p>
+									<p>• Chemistry</p>
+									<p>• Mathematics</p>
+									<p>• Hindi</p>
 								</div><hr>
 							</div>
 						</div>
