completed basic version

--- a/education.html
+++ b/education.html
@@ -55,7 +55,7 @@
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
 					<div class="author-img" style="background-image: url(images/PicsArt_03-06-08.16.36.jpg);"></div>
-					<h1 id="colorlib-logo"><a href="#">Ankit Kesarwani</a></h1>
+					<h1 id="colorlib-logo"><a href="index.html">Ankit Kesarwani</a></h1>
 					<p><strong>Software Developer | Open Source Enthusiast</strong></p>
 				</div>
 				<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -63,10 +63,11 @@
 						<ul>
 							<li><a href="index.html">About</a></li>
 							<li><a href="experience.html">Professional Experience</a></li>
+							<li><a href="apprenticeship.html">Apprenticeship Experience</a></li>
 							<li><b>Formal Education</b></li>
-							<li><a href="#">Projects</a></li>
-							<li><a href="#">Achievements</a></li>
-							<li><a href="#">Contact</li></a><br>
+							<li><a href="project.html">Projects</a></li>
+							<li><a href="achievement.html">Achievements</a></li>
+							<li><a href="contact.html">Contact</li></a><br>
 						</ul>
 						<!-- Social -->
 						<div class="social_container">
