--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Apprenticeship Experience - Ankit Kesarwani Portfolio</title>
+	<title>Contact - Ankit Kesarwani Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio webpage of Vinay Somawat" />
 	<meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
@@ -63,11 +63,11 @@
 						<ul>
 							<li><a href="index.html">About</a></li>
 							<li><a href="experience.html">Professional Experience</a></li>
-							<li><b>Apprenticeship Experience</b></li>
+							<li><a href="apprenticeship.html">Apprenticeship Experience</a></li>
 							<li><a href="education.html">Formal Education</a></li>
 							<li><a href="project.html">Projects</a></li>
 							<li><a href="achievement.html">Achievements</a></li>
-							<li><a href="contact.html">Contact</a></li><br>
+							<li><b>Contact</li></b><br>
 						</ul>
 						<!-- Social -->
 						<div class="social_container">
@@ -94,36 +94,14 @@
 				<section class="colorlib-experience">
 					<div class="colorlib-narrow-content">
 						<div class="row">
-							<div class="about-desc animate-box" data-animate-effect="fadeInLeft">
-								<h2>Apprenticeship Experience</h2>
+							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+								<h2>Contact</h2>
 								<hr>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row" align='center'>
 							<div class="col-md-12">
-								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
-									<div class="exp-img" style="background-image: url(logo/aptron.png);"></div>
-									<h2>Trainee</h2>
-									<h3>Aptron Solutions</h3>
-									<span>December 2016</span></br>
-									<span>Noida, India</span></br></br>
-									<p>• Learned PHP framework cover in depth the most important techniques used to build dynamic websites.</p>
-									<p>• Learned how to connect to an ODBC-compliant database and perform hands on practice with MySQL and PHP.</p>
-									<p>• Learned E-Commerce skills including dynamic data updates and shopping cart implementation.</p>
-									<p>• Learned how to configure PHP and the Apache web server.</p>
-								</div><hr>
-								<div class="exp-heading animate-box" data-animate-effect="fadeInRight">
-									<div class="micro-img" style="background-image: url(logo/mta.png);"></div>
-									<h2>Trainee</h2>
-									<h3>Microsoft Technology Associate</h3>
-									<span>June 2016 - July 2016</span></br>
-									<span>Allahabad, India</span></br></br>
-									<p>• Learned how to utilize Android’s XML-based layout system, which builds the UI containers and widgets.</p>
-									<p>• Learned how to handle screen rotation, how to define UIs so they can adjust for different screen sizes.</p>
-									<p>• Learned how to program control of state changes in the Activity Lifecycle.</p>
-									<p>• Learned how to connect Apps to web services such as Google Maps and UPS’s package tracking API.</p>
-									<p>• Learned how to play audio and video, and standard techniques for storage and retrieval.</p>
-								</div><hr>
+								<h3>Will Be Updated Soon...</h3>
 							</div>
 						</div>
 					</div>
@@ -159,3 +137,5 @@
 
 	</body>
 </html>
+
+
