--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,7 @@
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
 					<div class="author-img" style="background-image: url(images/PicsArt_03-06-08.16.36.jpg);"></div>
-					<h1 id="colorlib-logo"><a href="#">Ankit Kesarwani</a></h1>
+					<h1 id="colorlib-logo"><a href="index.html">Ankit Kesarwani</a></h1>
 					<p><strong>Software Developer | Open Source Enthusiast</strong></p>
 				</div>
 				<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -63,10 +63,11 @@
 						<ul>
 							<li><a href="index.html">About</a></li>
 							<li><b>Professional Experience</b></li>
+							<li><a href="apprenticeship.html">Apprenticeship Experience</a></li>
 							<li><a href="education.html">Formal Education</a></li>
-							<li><a href="#">Projects</a></li>
-							<li><a href="#">Achievements</a></li>
-							<li><a href="#">Contact</li></a><br>
+							<li><a href="project.html">Projects</a></li>
+							<li><a href="achievement.html">Achievements</a></li>
+							<li><a href="contact.html">Contact</li></a><br>
 						</ul>
 						<!-- Social -->
 						<div class="social_container">
@@ -131,8 +132,6 @@
 									<p>• Responsible for testing and troubleshoot the migration from Cognos 10.2 to 11.0.11 while developing Mashup API and Web Services Description Language.</p>
 									<p>• Worked in technologies like Jenkins, Docker, and Kubernetes to Automate software development process.</p>
 									<p>• Worked with Spring Boot and CouchDB to develop Rest Endpoints.</p>
-									<p>• Winner of IBM Platform 2.0 Hackathon.</p>
-									<p>• Stood among top 10 teams from India in IBM Call for Code Hackathon. Qualified for Global Call for Code.</p>
 								</div><hr>
 								<div class="exp-heading animate-box" data-animate-effect="fadeInRight">
 									<div class="exp-img" style="background-image: url(logo/pullerr.jpg);"></div>
