--- a/experience.html
+++ b/experience.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Professional Experience - Ankit Kesarwani Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Portfolio webpage of Vinay Somawat" />
+	<meta name="description" content="Portfolio webpage of Ankit Kesarwani" />
 	<meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-	<meta name="author" content="Vinay Somawat" />
+	<meta name="author" content="Ankit Kesarwani" />
         
     <!---------Google adsense------------->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
