--- a/project.html
+++ b/project.html
@@ -95,13 +95,116 @@
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-								<h2>Project</h2>
+								<h2>Projects</h2>
 								<hr>
 							</div>
 						</div>
-						<div class="row" align='center'>
+						<div class="row project-details" align='left'>
 							<div class="col-md-12">
-								<h3>Will Be Updated Soon...</h3>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											1
+										</strong>
+									</span></br></br>
+									<h2>TV Script Generation</h2>
+									<p>Generated Seinfeld TV scripts using RNNs. Used a part of Seinfeld dataset of scripts from 9 seasons and built a neural network that will generate a new TV script based on patterns it recognizes in the training data.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/Tv-Script-Generation"  target="_blank">Click</a> to see project notebook</span>
+								</div><hr>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											2
+										</strong>
+									</span></br></br>
+									<h2>Face Generation</h2>
+									<p>Defined and trained a Deep Convolutional GAN on a dataset of faces. Built a generator network to generate new images of faces that look realistic.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/Face-Generation"  target="_blank">Click</a> to see project notebook</span>
+								</div><hr>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											3
+										</strong>
+									</span></br></br>
+									<h2>Media Player Library</h2>
+									<p>Built a simplified Android Media Player that can be used to play Audio and Video both and maintains aspect ratio by default.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/Media-Player-Library"  target="_blank">Click</a> to see full project</span>
+								</div><hr>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											4
+										</strong>
+									</span></br></br>
+									<h2>Map Animation Library</h2>
+									<p>Built a library to animate an object over the map, similar to Uber and OLA. Rotate marker/car icon sharply over map as car takes a turn in real-time.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/Map-Animation-Library"  target="_blank">Click</a> to see full project</span>
+								</div><hr>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											5
+										</strong>
+									</span></br></br>
+									<h2>Cooky</h2>
+									<p>Developed a Baking App that will allow chef to share their recipes with the world. It will allow a user to select a recipe and see video-guided steps for how to complete it.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/Baking-App"  target="_blank">Click</a> to see full project</span>
+								</div><hr>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											6
+										</strong>
+									</span></br></br>
+									<h2>Popular Movies</h2>
+									<p>Developed an app that helps users discover popular and top rated movies, trailers of movies, and read the reviews. It fetches themoviedb.org API to display the movies data, that way the content provided is always up-to-date and relevant.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/Popular-Movies-Stage-Two"  target="_blank">Click</a> to see full project</span>
+								</div><hr>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											7
+										</strong>
+									</span></br></br>
+									<h2>Swayam</h2>
+									<p>Developed an app to control the movement of a wheelchair. Implemented features to track recent activities, SOS facility to contact individuals in case of emergency, and change language to make it easy to use.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/Swayam-APK"  target="_blank">Click</a> to see full project</span>
+								</div><hr>
+								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
+									<span class="fa-stack">
+										<!-- The icon that will wrap the number -->
+										<span class="fa fa-circle-o fa-stack-2x"></span>
+										<!-- a strong element with the custom content, in this case a number -->
+										<strong class="fa-stack-1x">
+											8
+										</strong>
+									</span></br></br>
+									<h2>3D Tetris Pop</h2>
+									<p>Built a Three dimensional stacking game programmed in C using OpenGL, objective of the game is to obtain the highest score by clearing layers with falling poly-cubes.</p></br>
+									<span><a href="https://github.com/ankitkesarwani/3D-Tetris-Pop"  target="_blank">Click</a> to see full project</span>
+								</div><hr>
 							</div>
 						</div>
 					</div>
