--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
 										</div>
 									</article>	
 								</div>
-								<div class="row">
+								<div class="row ind">
 									<div class="col-md-12">
 										<div class="about-desc">
-											<h3><a class="know-exp" href="experience.html"  target="_blank">Click</a> to know more about my experience...</h3>
+											<h3><a href="experience.html"  target="_blank">Click</a> to know more about my experience...</h3>
 											<hr>
 										</div>
 									</div>
@@ -532,10 +532,10 @@
 										</div>
 									</article>	
 								</div>
-								<div class="row">
+								<div class="row ind">
 									<div class="col-md-12">
 										<div class="about-desc">
-											<h3><a class="know-exp" href="apprenticeship.html"  target="_blank">Click</a> to know more about my apprentices...</h3>
+											<h3><a href="apprenticeship.html"  target="_blank">Click</a> to know more about my apprentices...</h3>
 											<hr>
 										</div>
 									</div>
@@ -599,11 +599,11 @@
 								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row ind">
 							<div class="col-md-12">
 								<div class="about-desc">
 									</br>
-									<h3><a class="know-exp" href="education.html"  target="_blank">Click</a> to know more about my education...</h3>
+									<h3><a href="education.html"  target="_blank">Click</a> to know more about my education...</h3>
 									<hr>
 								</div>
 							</div>
@@ -729,7 +729,7 @@
 											</strong>
 										</span></br></br>
 										<h3>Swayam</h3>
-										<p>Built an app to control the movement of wheelchair and make is easy to use with any wheelchair.</p>
+										<p>Built an app to control the movement of wheelchair and make is easy to use and connect with any wheelchair.</p>
 									</div>
 								</a>
 							</div>
@@ -751,11 +751,11 @@
 							</div>
 						</div>
 						
-						<div class="row">
+						<div class="row ind">
 							<div class="col-md-12">
 								<div class="about-desc">
 									</br>
-									<h3><a class="know-exp" href="project.html"  target="_blank">Click</a> to see more projects...</h3>
+									<h3><a href="project.html"  target="_blank">Click</a> to see more projects...</h3>
 									<hr>
 								</div>
 							</div>
@@ -781,11 +781,11 @@
 								<p>• Received <b>Certificate of Merit</b> from <b>Internshala</b> for securing an internship at Pullerr Logistics.</p>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row ind">
 							<div class="col-md-12">
 								<div class="about-desc">
 									</br>
-									<h3><a class="know-exp" href="achievement.html"  target="_blank">Click</a> to see more achievements and awards...</h3>
+									<h3><a href="achievement.html"  target="_blank">Click</a> to see more achievements and awards...</h3>
 									<hr>
 								</div>
 							</div>
@@ -802,7 +802,7 @@
 								<hr>
 							</div>
 							<div class="col-md-12 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-								<p>On the off chance that you might want to connect with me, be it for discussing about technologies, a project, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: kesarwani.ankit48@gmail.com">kesarwani.ankit48@gmail.com</a></strong>.</p>
+								<p>Now that you know what I've done and what I could do, feel free to reach out and start a conversation. Don't hesitate to send me an email at <strong><a href = "mailto: kesarwani.ankit48@gmail.com">kesarwani.ankit48@gmail.com</a></strong>.</p>
 							</div>
 						</div>
 					</div>
