updated achievement page

--- a/achievement.html
+++ b/achievement.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Achievement - Ankit Kesarwani Portfolio</title>
+	<title>Achievements - Ankit Kesarwani Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio webpage of Ankit Kesarwani" />
 	<meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
@@ -95,15 +95,102 @@
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-								<h2>Achievement</h2>
+								<h2>Achievements</h2>
 								<hr>
 							</div>
 						</div>
-						<div class="row" align='center'>
-							<div class="col-md-12">
-								<h3>Will Be Updated Soon...</h3>
+						<div class="row" align='left'>
+							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								<p>• Recipient of <b>Secure and Private AI challenge scholarship 2019</b> sponsored by <b>Facebook</b> and <b>Udacity</b> powered by <b>Facebook AI</b>.</p>
+								<p>• Received a fully paid invitation to attend <b>Facebook Developer Conference 2019</b> at the McEnery Convention Center in San Jose, California from <b>Facebook</b>.</p>
+								<p>• <b>Winner</b> of Platform 2.0 Hackathon organized by <b>IBM</b>.</p>
+								<p>• Stood among top 10 teams from India in <b>IBM Call for Code</b> Hackathon. Qualified for the global round of <b>Call for Code</b>.</p>
+								<p>• Rewarded a full 6-month <b>Google India Developer Nanodegree Scholarship</b> to Android Developer Nanodegree sponsored by <b>Google</b>.</p>
+								<p>• Recipient of <b>Google India challenge scholarship 2018</b> sponsored by <b>Google</b> and <b>Udacity</b>.</p>
+								<p>• Received <b>Certificate of Merit</b> from <b>Internshala</b> for securing an internship at Pullerr Logistics.</p>
 							</div>
 						</div>
+					</div>
+				</section>
+				
+				<section class="colorlib-experience">
+					<div class="colorlib-narrow-content">
+						<div class="row">
+							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+								<h2>Badges</h2>
+								<hr>
+							</div>
+						</div>
+						<div class="row badges">
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/call-for-code-2018-ibm-contributor.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">IBM Call for Code</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/ibm-xlence-advocate.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">IBM Xlence Advocate</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/ibm-cloud-essentials.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">IBM Cloud Essentials</p>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div></br>
+						<div class="row badges">
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/mta-database-fundamentals-certified-2016.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">MTA Database Fundamentals</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/spaic-scholarship-badge.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Secure & Private AI Challenge Scholarship</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/Google-Scholarship-India-Badge.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Google India Challenge Scholarship</p>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div><hr>
 					</div>
 				</section>
 				
@@ -134,7 +221,6 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-
 	</body>
 </html>
 
