--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 										<a href="experience.html" target="_blank">
 											<div class="services color-black">
-												<span class="icon2"><i class="icon-data"></i></span>
+												<span class="icon2"><i class="fa fa-suitcase" aria-hidden="true"></i></span>
 												<h3>Professional</br> Experience</h3>
 											</div>
 										</a>
@@ -128,7 +128,7 @@
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 										<a href="apprenticeship.html" target="_blank">
 											<div class="services color-black">
-												<span class="icon2"><i class="icon-data"></i></span>
+												<span class="icon2"><i class="fa fa-university" aria-hidden="true"></i></span>
 												<h3>Apprenticeship</br> Experience</h3>
 											</div>
 										</a>
@@ -136,16 +136,16 @@
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 										<a href="education.html" target="_blank">
 											<div class="services color-black">
-												<span class="icon2"><i class="icon-data"></i></span>
-												<h3>Formal<br> Education</h3>
+												<span class="icon2"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
+												<h3>Formal</br> Education</h3>
 											</div>
 										</a>
 									</div>
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 										<a href="project.html" target="_blank">
 											<div class="services color-black">
-												<span class="icon2"><i class="icon-data"></i></span>
-												<h3>Projects</h3>
+												<span class="icon2"><i class="fa fa-file-code-o" aria-hidden="true"></i></span>
+												<h3>Self</br> Projects</h3>
 											</div>
 										</a>
 									</div>
@@ -336,7 +336,7 @@
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-black">
-												<i class="icon-code"></i>
+												<i class="fa fa-android" aria-hidden="true"></i>
 											</div>
 											<div class="timeline-label">
 												<div class="logo-img" style="background-image: url(logo/bobble.jpeg);"></div>
@@ -376,7 +376,7 @@
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-black">
-												<i class="icon-code"></i>
+												<i class="fa fa-android" aria-hidden="true"></i>
 											</div>
 											<div class="timeline-label">
 												<div class="logo-img" style="background-image: url(logo/pullerr.jpg);"></div>
@@ -416,7 +416,7 @@
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-black">
-												<i class="icon-code"></i>
+												<i class="fa fa-database" aria-hidden="true"></i>
 											</div>
 											<div class="timeline-label">
 												<div class="logo-img" style="background-image: url(logo/andli.jpg);"></div>
@@ -425,7 +425,7 @@
 														<h4>May 2017 - July 2017</h4>
 													</div>
 													<div class="col-md-7">
-														<h2>Software Developer Intern</h2>
+														<h2>Database Management Intern</h2>
 														<span>ANDL Microsoft, Noida, India</span>
 													</div>
 												</div>
@@ -436,7 +436,7 @@
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-black">
-												<i class="icon-code"></i>
+												<i class="fa fa-android" aria-hidden="true"></i>
 											</div>
 											<div class="timeline-label">
 												<div class="logo-img" style="background-image: url(logo/anugraha.png);"></div>
@@ -488,7 +488,7 @@
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-black">
-												<i class="icon-code"></i>
+												<i class="fa fa-code-fork" aria-hidden="true"></i>
 											</div>
 											<div class="timeline-label">
 												<div class="logo-img" style="background-image: url(logo/aptron.png);"></div>
@@ -508,7 +508,7 @@
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 											<div class="timeline-icon color-black">
-												<i class="icon-code"></i>
+												<i class="fa fa-code-fork" aria-hidden="true"></i>
 											</div>
 											<div class="timeline-label">
 												<div class="micro-img" style="background-image: url(logo/mta.png);"></div>
@@ -803,6 +803,22 @@
 							</div>
 							<div class="col-md-12 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 								<p>Now that you know what I've done and what I could do, feel free to reach out and start a conversation. Don't hesitate to send me an email at <strong><a href = "mailto: kesarwani.ankit48@gmail.com">kesarwani.ankit48@gmail.com</a></strong>.</p>
+								<div class="row">
+									<div class="col-md-1">
+										<i class="fa fa-phone" aria-hidden="true"></i>
+									</div>
+									<div class="col-md-11">
+										<p>+91-8349980190</p>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-1">
+										<i class="fa fa-envelope" aria-hidden="true"></i>
+									</div>
+									<div class="col-md-11">
+										<p>kesarwani.ankit48@gmail.com</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
